gdaypunchwebapp/gdaypunchreact/src/App.scss
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.App {
  text-align: center;
  height: 100%;

  p {
    z-index: 1;
  }
}

.App-header-container {
  height: 100%;
}

.App-logo {
  height: 25vmin;
  pointer-events: none;
  margin-left: -87px;
}

.App-logo-big {
  height: 13vmin;
  pointer-events: none;
  z-index: 1;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear,
      App-logo-pulsate infinite 1s alternate;
  }
}

.app-temp-background {
  background-image: url("/static/launch-background.png");
  background-position: center;
  background-size: 136%;
  background-blend-mode: color-burn;
}

@media (min-width: 1024px) {
  .app-temp-background {
    background-size: 88%;
  }
}

@keyframes shine {
  0% {
    background-position: -500%;
  }
  100% {
    background-position: 500%;
  }
}

.header {
  align-items: center;
  width: 100%;
  display: flex;
  flex-direction: column;
  position: absolute;
  animation: 0.6s ease-in 0s 1 slideInFromLeft;
}

.side-cart {
  transition-timing-function: ease-in;
  transition: 0.2s;
  transform: translateX(100%);
}

.side-cart-open {
  transition-timing-function: ease-out;
  transition: 0.2s;
  transform: translateX(0);
}

.App-header-container,
.pdf-container {
  background-color: #f1f1f1;
  min-height: 75vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(5px + 2vmin);
  color: rgb(179, 179, 179);
  grid-column-start: 2;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 1;

  .react-pdf__Document,
  .react-pdf__Page,
  .react-pdf__Page__textContent {
    width: 100% !important;

    .react-pdf__Page__canvas {
      height: 100% !important;
      width: 100% !important;
    }
  }
}

.page-not-found {
  height: 100vh;
  font-size: 3em;
  color: white;
  font-weight: 200;

  .home-logo {
    margin: unset;
    height: unset;

    img {
      margin: unset;
    }
  }
}

.exit {
  animation: 0.6s ease-in 0s 1 slideOutToLeft;
  transform: translateX(-100%);
}

@keyframes slideInFromLeft {
  0% {
    opacity: 0;
    transform: translateX(-20pt);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideOutToLeft {
  0% {
    opacity: 1;
    transform: translateX(0);
  }
  60% {
    opacity: 0.3;
  }
  100% {
    opacity: 0;
    transform: translateX(-20pt);
  }
}

@keyframes slideInFromRight {
  0% {
    opacity: 0;
    transform: translateX(20pt);
  }
  90% {
    opacity: 0.2;
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideOutToRight {
  0% {
    opacity: 1;
    transform: translateX(0);
  }
  50% {
    opacity: 0.3;
  }
  100% {
    opacity: 0;
    transform: translateX(100%);
  }
}

.pdf-reader {
  color: #272727;
  padding-top: 10vh;

  .pdf-details {
    align-items: center;

    h2 {
      margin-right: 10pt;
    }
  }

  .reader-container {
    .left-overlay-clicker-top {
      position: absolute;
      left: 0;
      width: 45%;
      height: 35%;
      top: 0;
      z-index: 2;
    }

    .right-overlay-clicker-top {
      position: absolute;
      right: 0;
      width: 45%;
      height: 35%;
      top: 0;
      z-index: 2;
    }

    .left-overlay-clicker-bottom {
      position: absolute;
      left: 0;
      width: 45%;
      height: 53%;
      bottom: 0;
      z-index: 2;
    }

    .right-overlay-clicker-bottom {
      position: absolute;
      right: 0;
      width: 45%;
      height: 53%;
      bottom: 0;
      z-index: 2;
    }
  }
}

.reader-only {
  padding-top: unset;
}

.pdf-button {
  position: absolute;
  z-index: 1;
  height: 4em;
  width: 4em;

  &:hover {
    opacity: 1 !important;
    cursor: pointer;
  }
}

.disabled {
  &:hover {
    opacity: 0 !important;
    cursor: initial;
  }
}

.pdf-details {
  display: flex;
  flex-direction: row;
  text-align: start;
  margin-left: auto;
  margin-right: auto;
  width: max-content;
  margin-top: 10pt;
  margin-bottom: 10pt;
  align-items: flex-end;
  margin-bottom: 5vh;

  a {
    text-decoration: none;
    color: black;
  }

  svg {
    margin-left: 20pt;
    height: 1em;

    &:hover {
      cursor: pointer;
      transition-duration: 0.3s;
      box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
      -webkit-transform: scale(1.02);
      transform: scale(1.02);
    }
  }

  h2,
  h4 {
    margin: unset;
  }
}

.comments-section {
  padding: 50px;
  padding-top: unset;

  .comments-container {
    padding-bottom: 15pt;

    .comment {
      padding: 10pt;
      padding-left: unset;
      display: flex;

      .author {
        font-style: italic;
        font-weight: 600;
        margin-right: 10pt;
        color: #7b7b7b;
        font-size: 11pt;
      }

      .content {
        font-size: 11pt;
        margin-right: 10px;
      }
    }
  }

  .comment-creator {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    width: 100%;
    max-width: 450px;
    height: 88px;
    justify-content: space-between;

    input {
      height: 30pt;
      width: 100%;
      background: #f1f1f1;
      border: none;
      box-shadow: 0px 1px #949494;
    }

    button {
      width: 100px;
      height: 30px;
      border: none;
      text-transform: uppercase;
      letter-spacing: 1px;
      color: #3e3e3e;
    }
  }
}
/* ... */

